# Fibersail

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_sensor_exploration.ipynb  02_edge_processing.ipynb
src/fibersail_edge/: __init__.py  __main__.py  benchmark.py  evaluation.py  features.py  processor.py  ring_buffer.py  sensor.py  sink.py  sources.py
src/fibersail_edge/cloud/: __init__.py  __main__.py  backoff.py  durable_queue.py  s3.py  serialization.py  sink.py  uploader.py
src/fibersail_edge/edge/: __init__.py  adaptive.py  benchmark.py  compare.py  detector.py  evaluation.py  processor.py  ring_buffer.py  sink.py
src/fibersail_edge/sensor/: __init__.py  oscillator.py
take_home_exercise/: sample_dataset_small.csv  take_home_exercise.md
tests/: test_adaptive_detectors.py  test_backoff.py  test_cloud_restart_subprocess.py  test_cloud_s3.py  test_cloud_serialization.py  test_cloud_sink.py  test_compare.py  test_detector.py  test_durable_queue.py  test_evaluation.py  test_features.py  test_processor.py  test_ring_buffer.py  test_sensor.py  test_sink.py  test_sources.py  test_throughput.py  test_uploader.py
